# Todo-App-with-Poetry

./: .env  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
ToDo/: main.py  model.py
src/api/todo/: route.ts
src/app/: globals.css  page.tsx
src/app/components/: AddTask.tsx  Modal.tsx  Task.tsx  TodoList.tsx
